fixed: overflow-x scrollable

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -26,6 +26,7 @@ body {
     margin: 0;
     padding: 0;
     margin-top: 6rem;
+    overflow-x: hidden;
     /* うーん */
 }
 
